fix gap and some spaces

--- a/css/main.css
+++ b/css/main.css
@@ -347,10 +347,20 @@ input[type="checkbox"]{
 #navegacion-2-link {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 3%;
+    gap: 3.5%;
     margin: 0 3%;
     padding: 3%;
     max-width: 100%;
+}
+@media (max-width: 768px){
+    #navegacion-2-link {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 480px){
+    #navegacion-2-link {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 .mantente-info h4 {
     font-size: 24px;
